[gd_scene load_steps=3 format=3 uid="uid://bkidkjgwvhv8b"]

[ext_resource type="Script" uid="uid://d24obx6vmmqfb" path="res://scripts/Achievements.gd" id="1_4k8ij"]
[ext_resource type="Texture2D" uid="uid://ch6w1gntpgvws" path="res://assets/background/settings.png" id="2_n7c2d"]

[node name="Achievements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4k8ij")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n7c2d")
stretch_mode = 6

[node name="CopyrightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Â© 2025 
13.ink - All rights reserved"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.477
anchor_top = 0.478
anchor_right = 0.564
anchor_bottom = 0.478
offset_left = -500.16
offset_top = -839.76
offset_right = 499.88
offset_bottom = 900.24
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.980392, 0.27451, 1)
theme_override_colors/font_shadow_color = Color(0.81532, 0.118329, 0.632473, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 9
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 64
text = "ACHIEVEMENTS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AchievementsList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 60
alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.81532, 0.118329, 0.632473, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 64
text = "BACK"
